name:                HaskHull
version:             0.1.0.0
synopsis:            Haskell QuickHull
homepage:            github.com/sgillis/HaskHull
license:             GPL-3
license-file:        LICENSE
author:              San Gillis
maintainer:          gillis.san@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10
data-dir:            resources
data-files:          *.shader

executable HaskHull
  hs-source-dirs:	    src
  main-is:		        Main.hs
  build-depends:        base            >=4.6 && <4.7,
                        GLFW-b          == 1.4.6,
                        transformers    == 0.3.0.0,
                        stm             == 2.4.2,
                        mtl             == 2.1.2,
                        OpenGL          == 2.9.2.0,
                        array           == 0.4.0.1,
                        bytestring      == 0.10.0.2,
                        linear          == 1.10.1.2,
                        GLUtil          == 0.8.2,
                        linear-opengl   == 0.2.0.1
  default-language:     Haskell2010
